--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
         </svg></a>
       <ul class="mainMenu margin-top-3">
         <li><a href="#">Home</a></li>
-        <li><a href="https://t.me/minios_news" target="_blank"><svg style="height:21px;">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
-            </svg> News</a></li>
+        <li><svg style="height:21px;">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
+          </svg><a href="https://t.me/minios_news" target="_blank"> News</a></li>
         <li><a href="https://t.me/minios_chat" target="_blank"><svg style="height:21px;">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
             </svg> Discussion</a></li>
