--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
       <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
           </svg></a></div>
-      <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
+      <div class="right"><a class="button orange gradient" href="#">En</a><a class="button gray gradient"
+        href="index_ru.html">Ру</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
           </svg></span></div>
     </div>
@@ -269,22 +270,16 @@
         </svg></a>
       <ul class="mainMenu margin-top-3">
         <li><a href="#">Home</a></li>
-        <li><svg style="height:21px;">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
-          </svg><a href="https://t.me/minios_news" target="_blank">News</a></li>
-        <li><a href="https://t.me/minios_chat" target="_blank"><svg style="height:21px;">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
-            </svg> Discussion</a></li>
-        <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank"><svg
-              style="height:21px;">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
-            </svg> Documentation</a>
+        <li><a href="https://t.me/minios_news" target="_blank">News</a></li>
+        <li><a href="https://t.me/minios_chat" target="_blank">Discussion</a></li>
+        <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank">Documentation</a>
         </li>
-        <li><a href="https://github.com/minios-linux/minios-live" target="_blank"><svg style="height:21px;">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
-            </svg> Source code</a></li>
+        <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Source code</a></li>
         <li><a href="#screenshots">Screenshots</a></li>
       </ul>
+      <!--ul class="subMenu small opacity-8">
+        <li><a href="#"></a></li>
+      </ul-->
     </div>
   </nav>
 
