--- a/index_ru.html
+++ b/index_ru.html
@@ -252,7 +252,8 @@
             <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
                     </svg></a></div>
-            <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
+            <div class="right"><a class="button gray gradient" href="#">En</a><a class="button orange gradient"
+                href="index_ru.html">Ру</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
                     </svg></span></div>
         </div>
@@ -270,20 +271,12 @@
                 </svg></a>
             <ul class="mainMenu margin-top-3">
                 <li><a href="#">Главная</a></li>
-                <li><a href="https://t.me/minios_news" target="_blank"><svg style="height:21px;">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
-                        </svg> Новости</a></li>
-                <li><a href="https://t.me/minios_chat" target="_blank"><svg style="height:21px;">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
-                        </svg> Обсуждение</a></li>
-                <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank"><svg
-                            style="height:21px;">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
-                        </svg> Документация</a>
+                <li><a href="https://t.me/minios_news" target="_blank">Новости</a></li>
+                <li><a href="https://t.me/minios_chat" target="_blank">Обсуждение</a></li>
+                <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs"
+                        target="_blank">Документация</a>
                 </li>
-                <li><a href="https://github.com/minios-linux/minios-live" target="_blank"><svg style="height:21px;">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
-                        </svg> Исходный код</a></li>
+                <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Исходный код</a></li>
                 <li><a href="#screenshots">Скриншоты</a></li>
             </ul>
         </div>
