--- a/index_ru.html
+++ b/index_ru.html
@@ -252,8 +252,8 @@
             <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
                     </svg></a></div>
-            <div class="right"><a class="button gray gradient" href="#">En</a><a class="button orange gradient"
-                href="index_ru.html">Ру</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
+            <div class="right"><a class="button gray gradient" href="index.html">En</a><a class="button orange gradient"
+                href="#">Ру</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
                     </svg></span></div>
         </div>
