--- a/index.html
+++ b/index.html
@@ -244,15 +244,14 @@
           <li><a href="#screenshots">Screenshots</a></li>
         </ul>
       </div>
-      <div class="right"><a class="button orange gradient" href="#">English</a><a class="button gray gradient"
-          href="index_ru.html">Русский</a></div>
+      <div class="right"><a class="button gray gradient" href="index_ru.html">Русский</a></div>
     </div>
     <div class="sections compact">
       <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
           </svg></a></div>
-      <div class="right"><a class="button orange gradient" href="#">En</a><a class="button gray gradient"
-        href="index_ru.html">Ру</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
+      <div class="right"><a class="button gray gradient" href="index_ru.html">Ру</a><span
+          class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
           </svg></span></div>
     </div>
@@ -321,8 +320,7 @@
           <div class="fix-10-12 toCenter">
             <h1 class="ae-1">With attention to detail</h1>
             <p class="ae-2"><span class="opacity-8">We try to make MiniOS beautiful so that you can enjoy using it every
-                day and for any task. We pay great attention to every detail in the design of the operating
-                system.</span></p>
+                day and for any task. We pay great attention to every detail of the operating system.</span></p>
           </div>
           <div class="fix-12-12">
             <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
