--- a/index_ru.html
+++ b/index_ru.html
@@ -245,15 +245,13 @@
                     <li><a href="#screenshots">Скриншоты</a></li>
                 </ul>
             </div>
-            <div class="right"><a class="button gray gradient" href="index.html">English</a><a
-                    class="button orange gradient" href="#">Русский</a></div>
+            <div class="right"><a class="button gray gradient" href="index.html">English</a></div>
         </div>
         <div class="sections compact">
             <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
                     </svg></a></div>
-            <div class="right"><a class="button gray gradient" href="index.html">En</a><a class="button orange gradient"
-                href="#">Ру</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
+            <div class="right"><a class="button gray gradient" href="index.html">En</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
                     </svg></span></div>
         </div>
@@ -323,7 +321,7 @@
                         <h1 class="ae-1">С вниманием к деталям</h1>
                         <p class="ae-2"><span class="opacity-8">Мы стараемся сделать MiniOS красивой, чтобы вы могли
                                 наслаждаться её использованием каждый день и для любой задачи. Мы уделяем большое
-                                внимание каждой детали в дизайне операционной системы.</span></p>
+                                внимание каждой детали в операционной системе.</span></p>
                     </div>
                     <div class="fix-12-12">
                         <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
@@ -409,7 +407,7 @@
             <div class="container">
                 <div class="wrap">
 
-                    <div class="fix-12-12">
+                    <div class="fix-14-12">
                         <h1 class="ae-1">Выбери свою версию</h1>
                         <ul class="grid grid-83 noSpaces equal ae-2 fadeIn">
                             <li class="col-3-12 ae-3">
