--- a/index_ru.html
+++ b/index_ru.html
@@ -251,7 +251,8 @@
             <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
                     </svg></a></div>
-            <div class="right"><a class="button gray gradient" href="index.html">En</a><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
+            <div class="right"><a class="button gray gradient" href="index.html">En</a><span
+                    class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
                     </svg></span></div>
         </div>
@@ -407,7 +408,7 @@
             <div class="container">
                 <div class="wrap">
 
-                    <div class="fix-14-12">
+                    <div class="fix-12-12">
                         <h1 class="ae-1">Выбери свою версию</h1>
                         <ul class="grid grid-83 noSpaces equal ae-2 fadeIn">
                             <li class="col-3-12 ae-3">
@@ -419,7 +420,8 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                                     <ul class="p tiny">
                                         <li><strong>Самая маленькая версия MiniOS</strong></li>
-                                        <li class="opacity-7">включает минимальную среду Xfce и базовый набор ПО.</li>
+                                        <li class="opacity-7">включает минимальную рабочую среду и минимальный набор ПО.
+                                        </li>
                                     </ul>
                                 </div>
                                 <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Скачать</a>
@@ -433,7 +435,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                                     <ul class="p tiny">
                                         <li><strong>Стандартная версия MiniOS</strong></li>
-                                        <li class="opacity-8">включает среду Xfce, дополнительные консольные утилиты,
+                                        <li class="opacity-8">включает дополнительные консольные утилиты,
                                             несвободные микропрограммы и более удобное программное обеспечение.</li>
                                     </ul>
                                 </div>
@@ -448,8 +450,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                                     <ul class="p tiny">
                                         <li><strong>Максимальная версия MiniOS</strong></li>
-                                        <li class="opacity-8">включает в себя среду Xfce, дополнительные консольные
-                                            утилиты, несвободные микропрограммы, дополнительные драйверы и программное
+                                        <li class="opacity-8">включает в себя дополнительные драйверы, программное
                                             обеспечение для ежедневного использования и обслуживания ПК.
                                         </li>
                                     </ul>
@@ -465,8 +466,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                                     <ul class="p tiny">
                                         <li><strong>Ещё более максимальная версия MiniOS;)</strong></li>
-                                        <li class="opacity-8">включает в себя среду Xfce, дополнительные консольные
-                                            утилиты, несвободные микропрограммы, дополнительные драйверы, программное
+                                        <li class="opacity-8">включает в себя программное
                                             обеспечение для ежедневного использования, разработки, виртуализации и
                                             обслуживания ПК.</li>
                                     </ul>
