--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                   <ul class="p tiny">
-                    <li><strong>The smallest edition of MiniOS</strong></li>
+                    <li><strong>The smallest edition</strong></li>
                     <li class="opacity-7">includes a minimal Xfce environment and a
                       basic set of software.</li>
                   </ul>
@@ -432,7 +432,7 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
-                    <li><strong>The standard edition of MiniOS</strong></li>
+                    <li><strong>The standard edition</strong></li>
                     <li class="opacity-8">includes the Xfce environment, additional
                       console utilities, non-free firmware, and more user-friendly software.</li>
                   </ul>
@@ -447,7 +447,7 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                   <ul class="p tiny">
-                    <li><strong>The maximal edition of MiniOS</strong></li>
+                    <li><strong>The maximal edition</strong></li>
                     <li class="opacity-8">includes the Xfce environment, additional console utilities, non-free
                       firmware, additional drivers and software for daily PC use and maintenance.</li>
                   </ul>
@@ -462,7 +462,7 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                   <ul class="p tiny">
-                    <li><strong>The ultimate edition of MiniOS</strong></li>
+                    <li><strong>The ultimate edition</strong></li>
                     <li class="opacity-8">includes the Xfce environment, additional console utilities, non-free
                       firmware, additional drivers, software for daily use, development, virtualization and PC
                       maintenance.</li>
