--- a/index_ru.html
+++ b/index_ru.html
@@ -419,7 +419,7 @@
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                                     <ul class="p tiny">
-                                        <li><strong>Самая маленькая версия</strong></li>
+                                        <!--li><strong>Самая маленькая версия</strong></li-->
                                         <li class="opacity-7">включает минимальную рабочую среду и минимальный набор ПО.
                                         </li>
                                     </ul>
@@ -434,7 +434,7 @@
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                                     <ul class="p tiny">
-                                        <li><strong>Стандартная версия</strong></li>
+                                        <!--li><strong>Стандартная версия</strong></li-->
                                         <li class="opacity-8">включает дополнительные консольные утилиты,
                                             несвободные микропрограммы и более удобное программное обеспечение.</li>
                                     </ul>
@@ -449,7 +449,7 @@
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                                     <ul class="p tiny">
-                                        <li><strong>Максимальная версия</strong></li>
+                                        <!--li><strong>Максимальная версия</strong></li-->
                                         <li class="opacity-8">включает в себя дополнительные драйверы, программное
                                             обеспечение для ежедневного использования и обслуживания ПК.
                                         </li>
@@ -465,7 +465,7 @@
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                                     <ul class="p tiny">
-                                        <li><strong>Ещё более максимальная версия;)</strong></li>
+                                        <!--li><strong>Ещё более максимальная версия;)</strong></li-->
                                         <li class="opacity-8">включает в себя программное
                                             обеспечение для ежедневного использования, разработки, виртуализации и
                                             обслуживания ПК.</li>
