--- a/index_ru.html
+++ b/index_ru.html
@@ -296,8 +296,8 @@
                                 <p class="ae-1 fromLeft"><span class="opacity-8">Быстрая. Простая. Надёжная.</span></p>
                                 <p class="ae-2 fromLeft"><span class="opacity-8">Эта система создана для вашей
                                         флешки.</span></p>
-                                <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Download</a>
-                                <a href="#instructions" class="button blue gradient ae-4 fromCenter">Instructions</a>
+                                <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Скачать</a>
+                                <a href="#instructions" class="button blue gradient ae-4 fromCenter">Инструкции</a>
                             </li>
                             <li class="col-6-12">
                                 <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg"
