--- a/index.html
+++ b/index.html
@@ -318,9 +318,8 @@
         <div class="wrap">
 
           <div class="fix-10-12 toCenter">
-            <h1 class="ae-1">With attention to detail</h1>
-            <p class="ae-2"><span class="opacity-8">We try to make MiniOS beautiful so that you can enjoy using it every
-                day and for any task. We pay great attention to every detail of the operating system.</span></p>
+            <h1 class="ae-1">Аttention to detail</h1>
+            <p class="ae-2"><span class="opacity-8">We make MiniOS beautiful so that you can enjoy using it every day and for any task. We pay great attention to every detail in the operating system.</span></p>
           </div>
           <div class="fix-12-12">
             <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
