--- a/index_ru.html
+++ b/index_ru.html
@@ -319,10 +319,8 @@
                 <div class="wrap">
 
                     <div class="fix-10-12 toCenter">
-                        <h1 class="ae-1">С вниманием к деталям</h1>
-                        <p class="ae-2"><span class="opacity-8">Мы стараемся сделать MiniOS красивой, чтобы вы могли
-                                наслаждаться её использованием каждый день и для любой задачи. Мы уделяем большое
-                                внимание каждой детали в операционной системе.</span></p>
+                        <h1 class="ae-1">Внимание к деталям</h1>
+                        <p class="ae-2"><span class="opacity-8">Мы делаем MiniOS красивой, чтобы вы могли наслаждаться её использованием каждый день и для любой задачи. Мы уделяем большое внимание каждой детали в операционной системе.</span></p>
                     </div>
                     <div class="fix-12-12">
                         <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
