--- a/index_ru.html
+++ b/index_ru.html
@@ -416,7 +416,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                                     <ul class="p tiny">
                                         <!--li><strong>Самая маленькая версия</strong></li-->
-                                        <li class="opacity-7">включает минимальную рабочую среду и минимальный набор ПО.
+                                        <li class="opacity-7">минимальная рабочая среда.
                                         </li>
                                     </ul>
                                 </div>
@@ -446,7 +446,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                                     <ul class="p tiny">
                                         <!--li><strong>Максимальная версия</strong></li-->
-                                        <li class="opacity-8">включает в себя дополнительные драйверы, программное
+                                        <li class="opacity-8">включает дополнительные драйверы, программное
                                             обеспечение для ежедневного использования и обслуживания ПК.
                                         </li>
                                     </ul>
@@ -462,9 +462,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                                     <ul class="p tiny">
                                         <!--li><strong>Ещё более максимальная версия;)</strong></li-->
-                                        <li class="opacity-8">включает в себя программное
-                                            обеспечение для ежедневного использования, разработки, виртуализации и
-                                            обслуживания ПК.</li>
+                                        <li class="opacity-8">включает программное обеспечение для ежедневного использования, разработки, виртуализации и обслуживания ПК.</li>
                                     </ul>
                                 </div>
                                 <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Скачать</a>
