--- a/index.html
+++ b/index.html
@@ -417,8 +417,7 @@
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                   <ul class="p tiny">
                     <!--li><strong>The smallest edition</strong></li-->
-                    <li class="opacity-7">includes a minimal Xfce environment and a
-                      basic set of software.</li>
+                    <li class="opacity-7">minimum working environment.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Download</a>
@@ -432,8 +431,7 @@
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
                     <!--li><strong>The standard edition</strong></li-->
-                    <li class="opacity-8">includes the Xfce environment, additional
-                      console utilities, non-free firmware, and more user-friendly software.</li>
+                    <li class="opacity-8">includes additional console utilities, non-free firmware, and more user-friendly software.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
@@ -447,8 +445,7 @@
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                   <ul class="p tiny">
                     <!--li><strong>The maximal edition</strong></li-->
-                    <li class="opacity-8">includes the Xfce environment, additional console utilities, non-free
-                      firmware, additional drivers and software for daily PC use and maintenance.</li>
+                    <li class="opacity-8">includes additional drivers, software for daily use and PC maintenance..</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
