--- a/index_ru.html
+++ b/index_ru.html
@@ -290,9 +290,9 @@
                     <div class="fix-12-12">
                         <ul class="flex fixedSpaces verticalCenter reverse">
                             <li class="col-6-12 center middle">
-                                <h1 class="ae-1 fromLeft"><svg style="width:153px;height:35px">
+                                <h1 class="ae-1 fromLeft">Жо<svg style="width:153px;height:35px">
                                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-                                    </svg></h1>
+                                    </svg>пА</h1>
                                 <p class="ae-1 fromLeft"><span class="opacity-8">Быстрая. Простая. Надёжная.</span></p>
                                 <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Скачать</a>
                                 <a href="#instructions" class="button blue gradient ae-4 fromCenter">Инструкции</a>
@@ -416,7 +416,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                                     <ul class="p tiny">
                                         <!--li><strong>Самая маленькая версия</strong></li-->
-                                        <li class="opacity-7">минимальная рабочая среда.
+                                        <li class="opacity-7">минимальная рабочая среда
                                         </li>
                                     </ul>
                                 </div>
@@ -432,7 +432,7 @@
                                     <ul class="p tiny">
                                         <!--li><strong>Стандартная версия</strong></li-->
                                         <li class="opacity-8">включает дополнительные консольные утилиты,
-                                            несвободные микропрограммы и более удобное программное обеспечение.</li>
+                                            несвободные микропрограммы и более удобное программное обеспечение</li>
                                     </ul>
                                 </div>
                                 <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Скачать</a>
@@ -447,7 +447,7 @@
                                     <ul class="p tiny">
                                         <!--li><strong>Максимальная версия</strong></li-->
                                         <li class="opacity-8">включает дополнительные драйверы, программное
-                                            обеспечение для ежедневного использования и обслуживания ПК.
+                                            обеспечение для ежедневного использования и обслуживания ПК
                                         </li>
                                     </ul>
                                 </div>
@@ -462,7 +462,7 @@
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                                     <ul class="p tiny">
                                         <!--li><strong>Ещё более максимальная версия;)</strong></li-->
-                                        <li class="opacity-8">включает программное обеспечение для ежедневного использования, разработки, виртуализации и обслуживания ПК.</li>
+                                        <li class="opacity-8">включает программное обеспечение для ежедневного использования, разработки, виртуализации и обслуживания ПК</li>
                                     </ul>
                                 </div>
                                 <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Скачать</a>
