--- a/index_ru.html
+++ b/index_ru.html
@@ -290,9 +290,10 @@
                     <div class="fix-12-12">
                         <ul class="flex fixedSpaces verticalCenter reverse">
                             <li class="col-6-12 center middle">
-                                <h1 class="ae-1 fromLeft">Жо<svg style="width:153px;height:35px">
+                                <h6 class="ae-1 fromLeft">&nbsp;</h6>
+                                <h1 class="ae-1 fromLeft"><svg style="width:153px;height:35px">
                                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-                                    </svg>пА</h1>
+                                    </svg></h1>
                                 <p class="ae-1 fromLeft"><span class="opacity-8">Быстрая. Простая. Надёжная.</span></p>
                                 <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Скачать</a>
                                 <a href="#instructions" class="button blue gradient ae-4 fromCenter">Инструкции</a>
