--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 center middle">
+                <h6 class="ae-1 fromLeft">&nbsp;</h6>
                 <h1 class="ae-1 fromLeft"><svg style="width:153px;height:35px">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
                   </svg></h1>
