--- a/index.html
+++ b/index.html
@@ -312,7 +312,27 @@
     <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
-  <!-- Slide 2 (#75) -->
+  <!-- Slide 2 (#15) -->
+<section class="slide fade-6 kenBurns fromLeft">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+      
+        <div class="fix-12-12">
+          <div class="fix-7-12 left toRight">
+            <h1 class="ae-1">What is MiniOS?</h1>
+            <p class="ae-2"><span class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, assembled using minios-live scripts, the main purpose of which is to provide the user with a full-fledged, comfortable working environment for work, entertainment and creativity anywhere and on any x86-compatible hardware, saving your personal data on removable &nbsp;media.</span></p>
+            <a class="button green gradient crop ae-3">Download</a>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
+</section>
+
+  <!-- Slide 3 (#75) -->
   <section data-name="screenshots" class="slide fade-6 kenBurns">
     <div class="content">
       <div class="container">
