--- a/index.html
+++ b/index.html
@@ -319,17 +319,27 @@
       <div class="wrap">
       
         <div class="fix-12-12">
-          <div class="fix-7-12 left toRight">
-            <h1 class="ae-1">What is MiniOS?</h1>
-            <p class="ae-2"><span class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, assembled using minios-live scripts, the main purpose of which is to provide the user with a full-fledged, comfortable working environment for work, entertainment and creativity anywhere and on any x86-compatible hardware, saving your personal data on removable &nbsp;media.</span></p>
-            <a class="button green gradient crop ae-3">Download</a>
-          </div>
+          <ul class="flex verticalCenter">
+            <li class="col-5-12 cell-27">
+              <div class="fix-4-12">
+                <ul>
+                  <li><img width="305" src="assets/img/Debian-OpenLogo.png" alt="Apple Watch Thumbnail"/></li>
+                </ul>
+              </div>
+            </li>
+            <li class="col-7-12 left">
+              <h1 class="ae-2 fromRight">What is MiniOS?</h1>
+              <div class="ae-3 fromRight">
+                <p class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, assembled using minios-live scripts, the main purpose of which is to provide the user with a full-fledged, comfortable working environment for work, entertainment and creativity anywhere and on any x86-compatible hardware, saving your personal data on removable &nbsp;media.</p>
+              </div>
+            </li>
+          </ul>
         </div>
         
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-rose.jpg)"></div>
 </section>
 
   <!-- Slide 3 (#75) -->
