--- a/index_ru.html
+++ b/index_ru.html
@@ -296,7 +296,7 @@
                                     </svg></h1>
                                 <p class="ae-1 fromLeft"><span class="opacity-8">Быстрая. Простая. Надёжная.</span></p>
                                 <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Скачать</a>
-                                <a href="#instructions" class="button blue gradient ae-4 fromCenter">Инструкции</a>
+                                <a href="#more" class="button blue gradient ae-4 fromCenter">Подробнее</a>
                             </li>
                             <li class="col-6-12">
                                 <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg"
@@ -310,6 +310,36 @@
         </div>
         <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
     </section>
+
+  <!-- Slide 2 (#15) -->
+  <section data-name="more" class="slide fade-6 kenBurns fromLeft">
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+        
+          <div class="fix-12-12">
+            <ul class="flex verticalCenter">
+              <li class="col-5-12 cell-27">
+                <div class="fix-4-12">
+                  <ul>
+                    <li><img class="ae-4" width="305" src="assets/img/Debian-OpenLogo.png" alt="Debian"/></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="col-7-12 left">
+                <h1 class="ae-2 fromRight">Что такое MiniOS?</h1>
+                <div class="ae-3 fromRight">
+                  <p class="opacity-8">MiniOS - портативный модульный дистрибутив Linux на базе Debian, собранный с помощью скриптов minios-live, основной целью которого является предоставить пользователю полноценную, комфортную рабочую среду для работы, развлечений и творчества в любом месте на любом x86-совместимом оборудовании, сохраняя ваши личные данные на съёмном носителе &nbsp;информации.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+    <div class="background" style="background-image:url(assets/img/background/background-rose.jpg)"></div>
+  </section>
 
     <!-- Slide 2 (#75) -->
     <section data-name="screenshots" class="slide fade-6 kenBurns">
