--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                   </svg></h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
                 <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Download</a>
-                <a href="#instructions" class="button blue gradient ae-4 fromCenter">Instructions</a>
+                <a href="#more" class="button blue gradient ae-4 fromCenter">More</a>
               </li>
               <li class="col-6-12">
                 <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard"
@@ -313,7 +313,7 @@
   </section>
 
   <!-- Slide 2 (#15) -->
-<section class="slide fade-6 kenBurns fromLeft">
+<section data-name="more" class="slide fade-6 kenBurns fromLeft">
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -323,14 +323,14 @@
             <li class="col-5-12 cell-27">
               <div class="fix-4-12">
                 <ul>
-                  <li><img width="305" src="assets/img/Debian-OpenLogo.png" alt="Apple Watch Thumbnail"/></li>
+                  <li><img class="ae-4" width="305" src="assets/img/Debian-OpenLogo.png" alt="Debian"/></li>
                 </ul>
               </div>
             </li>
             <li class="col-7-12 left">
               <h1 class="ae-2 fromRight">What is MiniOS?</h1>
               <div class="ae-3 fromRight">
-                <p class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, assembled using minios-live scripts, the main purpose of which is to provide the user with a full-fledged, comfortable working environment for work, entertainment and creativity anywhere and on any x86-compatible hardware, saving your personal data on removable &nbsp;media.</p>
+                <p class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, built using minios-live scripts, the main purpose of which is to provide the user with a full-fledged, comfortable working environment for work, entertainment and creativity anywhere on any x86-compatible hardware, saving your personal data on removable &nbsp;media.</p>
               </div>
             </li>
           </ul>
