--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             <ul class="grid grid-83 noSpaces equal ae-2 fadeIn">
               <li class="col-3-12 ae-3">
                 <h3>Minimum</h3>
-                <div class="price ae-5"><span class="currency">MB</span>365</div>
+                <div class="price ae-5"><span class="currency">MB</span>420</div>
                 <div class="ae-5">
                   <h6 class="uppercase bold small opacity-4">xz compression</h6>
                 </div>
@@ -469,30 +469,28 @@
               </li>
               <li class="col-3-12 ae-5">
                 <h3>Maximum</h3>
-                <div class="price ae-7"><span class="currency">MB</span>656</div>
+                <div class="price ae-7"><span class="currency">MB</span>650</div>
                 <div class="ae-7">
                   <h6 class="uppercase bold small opacity-4">zstd compression</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                   <ul class="p tiny">
                     <!--li><strong>The maximal edition</strong></li-->
-                    <li class="opacity-8">includes additional drivers, software for daily use and PC maintenance..</li>
+                    <li class="opacity-8">includes additional drivers, software for daily use and PC maintenance.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
               </li>
               <li class="col-3-12 ae-6">
                 <h3>Ultra</h3>
-                <div class="price ae-8"><span class="currency">MB</span>1350</div>
+                <div class="price ae-8"><span class="currency">MB</span>1370</div>
                 <div class="ae-7">
                   <h6 class="uppercase bold small opacity-4">zstd compression</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                   <ul class="p tiny">
                     <!--li><strong>The ultimate edition</strong></li-->
-                    <li class="opacity-8">includes the Xfce environment, additional console utilities, non-free
-                      firmware, additional drivers, software for daily use, development, virtualization and PC
-                      maintenance.</li>
+                    <li class="opacity-8">includes software for daily use, development, virtualization and PC maintenance.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
