--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   </section>
 
   <!-- Slide 2 (#15) -->
-<section data-name="more" class="slide fade-6 kenBurns fromLeft">
+<section data-name="more" class="slide fade-6 kenBurns">
   <div class="content">
     <div class="container">
       <div class="wrap">
