--- a/index_ru.html
+++ b/index_ru.html
@@ -311,35 +311,41 @@
         <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
     </section>
 
-  <!-- Slide 2 (#15) -->
-  <section data-name="more" class="slide fade-6 kenBurns fromLeft">
-    <div class="content">
-      <div class="container">
-        <div class="wrap">
-        
-          <div class="fix-12-12">
-            <ul class="flex verticalCenter">
-              <li class="col-5-12 cell-27">
-                <div class="fix-4-12">
-                  <ul>
-                    <li><img class="ae-4" width="305" src="assets/img/Debian-OpenLogo.png" alt="Debian"/></li>
-                  </ul>
+    <!-- Slide 2 (#15) -->
+    <section data-name="more" class="slide fade-6 kenBurns">
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+
+                    <div class="fix-12-12">
+                        <ul class="flex verticalCenter">
+                            <li class="col-5-12 cell-27">
+                                <div class="fix-4-12">
+                                    <ul>
+                                        <li><img class="ae-4" width="305" src="assets/img/Debian-OpenLogo.png"
+                                                alt="Debian" /></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="col-7-12 left">
+                                <h1 class="ae-2 fromRight">Что такое MiniOS?</h1>
+                                <div class="ae-3 fromRight">
+                                    <p class="opacity-8">MiniOS - портативный модульный дистрибутив Linux на базе
+                                        Debian, собранный с помощью скриптов minios-live, основной целью которого
+                                        является предоставить пользователю полноценную, комфортную рабочую среду для
+                                        работы, развлечений и творчества в любом месте на любом x86-совместимом
+                                        оборудовании, сохраняя ваши личные данные на съёмном носителе &nbsp;информации.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
-              </li>
-              <li class="col-7-12 left">
-                <h1 class="ae-2 fromRight">Что такое MiniOS?</h1>
-                <div class="ae-3 fromRight">
-                  <p class="opacity-8">MiniOS - портативный модульный дистрибутив Linux на базе Debian, собранный с помощью скриптов minios-live, основной целью которого является предоставить пользователю полноценную, комфортную рабочую среду для работы, развлечений и творчества в любом месте на любом x86-совместимом оборудовании, сохраняя ваши личные данные на съёмном носителе &nbsp;информации.</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-          
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="background" style="background-image:url(assets/img/background/background-rose.jpg)"></div>
-  </section>
+        <div class="background" style="background-image:url(assets/img/background/background-rose.jpg)"></div>
+    </section>
 
     <!-- Slide 2 (#75) -->
     <section data-name="screenshots" class="slide fade-6 kenBurns">
@@ -349,7 +355,9 @@
 
                     <div class="fix-10-12 toCenter">
                         <h1 class="ae-1">Внимание к деталям</h1>
-                        <p class="ae-2"><span class="opacity-8">Мы делаем MiniOS красивой, чтобы вы могли наслаждаться её использованием каждый день и для любой задачи. Мы уделяем большое внимание каждой детали в операционной системе.</span></p>
+                        <p class="ae-2"><span class="opacity-8">Мы делаем MiniOS красивой, чтобы вы могли наслаждаться
+                                её использованием каждый день и для любой задачи. Мы уделяем большое внимание каждой
+                                детали в операционной системе.</span></p>
                     </div>
                     <div class="fix-12-12">
                         <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
@@ -442,7 +450,7 @@
                                 <h3>Minimum</h3>
                                 <div class="price ae-5"><span class="currency">MB</span>420</div>
                                 <div class="ae-5">
-                                    <h6 class="uppercase bold small opacity-4">xz compression</h6>
+                                    <h6 class="uppercase bold small opacity-4">сжатие xz</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                                     <ul class="p tiny">
@@ -457,7 +465,7 @@
                                 <h3>Standard</h3>
                                 <div class="price ae-6"><span class="currency">MB</span>540</div>
                                 <div class="ae-6">
-                                    <h6 class="uppercase bold small opacity-4">zstd compression</h6>
+                                    <h6 class="uppercase bold small opacity-4">сжатие zstd</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                                     <ul class="p tiny">
@@ -472,7 +480,7 @@
                                 <h3>Maximum</h3>
                                 <div class="price ae-7"><span class="currency">MB</span>650</div>
                                 <div class="ae-7">
-                                    <h6 class="uppercase bold small opacity-4">zstd compression</h6>
+                                    <h6 class="uppercase bold small opacity-4">сжатие zstd</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                                     <ul class="p tiny">
@@ -488,12 +496,13 @@
                                 <h3>Ultra</h3>
                                 <div class="price ae-8"><span class="currency">MB</span>1370</div>
                                 <div class="ae-7">
-                                    <h6 class="uppercase bold small opacity-4">zstd compression</h6>
+                                    <h6 class="uppercase bold small opacity-4">сжатие zstd</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                                     <ul class="p tiny">
                                         <!--li><strong>Ещё более максимальная версия;)</strong></li-->
-                                        <li class="opacity-8">включает программное обеспечение для ежедневного использования, разработки, виртуализации и обслуживания ПК</li>
+                                        <li class="opacity-8">включает программное обеспечение для ежедневного
+                                            использования, разработки, виртуализации и обслуживания ПК</li>
                                     </ul>
                                 </div>
                                 <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Скачать</a>
