--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
                 <a href="#more" class="button blue gradient ae-4 fromCenter">More</a>
               </li>
               <li class="col-6-12">
-                <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard"
-                  data-action="zoom" />
+                <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom" />
               </li>
             </ul>
           </div>
