--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <li class="col-5-12 cell-27">
                 <div class="fix-4-12">
                   <ul>
-                    <li><img class="ae-4" width="200" src="assets/img/Debian-OpenLogo.png" alt="Debian" /></li>
+                    <li><img class="ae-4" width="250" src="assets/img/Debian-OpenLogo.png" alt="Debian" /></li>
                   </ul>
                 </div>
               </li>
@@ -353,7 +353,7 @@
           <div class="fix-10-12 toCenter">
             <h1 class="ae-1">Аttention to detail</h1>
             <p class="ae-2"><span class="opacity-8">We make MiniOS beautiful so that you can enjoy using it every day
-                and for any task. We pay great attention to every detail in the operating system.</span></p>
+                and for any task. We pay great attention to every detail in the operating &nbsp;system.</span></p>
           </div>
           <div class="fix-12-12">
             <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
