--- a/index_ru.html
+++ b/index_ru.html
@@ -321,7 +321,7 @@
                             <li class="col-5-12 cell-27">
                                 <div class="fix-4-12">
                                     <ul>
-                                        <li><img class="ae-4" width="200" src="assets/img/Debian-OpenLogo.png"
+                                        <li><img class="ae-4" width="250" src="assets/img/Debian-OpenLogo.png"
                                                 alt="Debian" /></li>
                                     </ul>
                                 </div>
@@ -356,7 +356,7 @@
                         <h1 class="ae-1">Внимание к деталям</h1>
                         <p class="ae-2"><span class="opacity-8">Мы делаем MiniOS красивой, чтобы вы могли наслаждаться
                                 её использованием каждый день и для любой задачи. Мы уделяем большое внимание каждой
-                                детали в операционной системе.</span></p>
+                                детали в операционной &nbsp;системе.</span></p>
                     </div>
                     <div class="fix-12-12">
                         <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
