--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <li class="col-5-12 cell-27">
                 <div class="fix-4-12">
                   <ul>
-                    <li><img class="ae-4" width="250" src="assets/img/Debian-OpenLogo.png" alt="Debian" /></li>
+                    <li><img class="ae-4" width="250" src="assets/img/debian-logo.svg" alt="Debian" /></li>
                   </ul>
                 </div>
               </li>
