--- a/index_ru.html
+++ b/index_ru.html
@@ -321,7 +321,7 @@
                             <li class="col-5-12 cell-27">
                                 <div class="fix-4-12">
                                     <ul>
-                                        <li><img class="ae-4" width="250" src="assets/img/Debian-OpenLogo.png"
+                                        <li><img class="ae-4" width="250" src="assets/img/debian-logo.svg"
                                                 alt="Debian" /></li>
                                     </ul>
                                 </div>
