--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     var userLang = navigator.language || navigator.userLanguage;
-    if (userLang == "ru-RU") {
+    if (userLang == "ru_RU") {
         window.location.href = "index-ru.html";
     }
     else {
