--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		document.getElementById("myText").innerHTML = userLang;
 	})();
 </script>
-<!--script type="text/javascript">
+<script type="text/javascript">
     
     var userLang = navigator.language || navigator.userLanguage;
-    if (userLang == "ru_RU") {
+    if (userLang == "ru-RU"|| userLang == "ru") {
         window.location.href = "index-ru.html";
     }
-    else {
-        window.location.href = "index-en.html";
-    };
-</script-->
+    //else {
+    //    window.location.href = "index-en.html";
+    //};
+</script>
