--- a/index-ru.html
+++ b/index-ru.html
@@ -245,13 +245,13 @@
                     <li><a href="#screenshots">Скриншоты</a></li>
                 </ul>
             </div>
-            <div class="right"><a class="button gray gradient" href="index.html">English</a></div>
+            <div class="right"><a class="button gray gradient" href="en.minios.dev">English</a></div>
         </div>
         <div class="sections compact">
             <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
                     </svg></a></div>
-            <div class="right"><a class="button gray gradient" href="index.html">En</a><span
+            <div class="right"><a class="button gray gradient" href="en.minios.dev">En</a><span
                     class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
                     </svg></span></div>
