--- a/index-en.html
+++ b/index-en.html
@@ -244,13 +244,13 @@
           <li><a href="#screenshots">Screenshots</a></li>
         </ul>
       </div>
-      <div class="right"><a class="button gray gradient" href="ru.minios.dev">Русский</a></div>
+      <div class="right"><a class="button gray gradient" href="https://ru.minios.dev">Русский</a></div>
     </div>
     <div class="sections compact">
       <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
           </svg></a></div>
-      <div class="right"><a class="button gray gradient" href="ru.minios.dev">Ру</a><span
+      <div class="right"><a class="button gray gradient" href="https://ru.minios.dev">Ру</a><span
           class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
           </svg></span></div>
