--- a/index-en.html
+++ b/index-en.html
@@ -244,7 +244,7 @@
               <li class="col-5-12 cell-27">
                 <div class="fix-4-12">
                   <ul>
-                    <li><img class="ae-4" width="250" src="assets/img/debian-logo.svg" alt="Debian" /></li>
+                    <li><img class="ae-4" width="250" src="assets/svg/debian-logo.svg" alt="Debian" /></li>
                   </ul>
                 </div>
               </li>
