--- a/index-ru.html
+++ b/index-ru.html
@@ -378,7 +378,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Скачать</a>
+                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-minimum-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-7">Скачать</a>
                             </li>
                             <li class="col-3-12 ae-4">
                                 <h3>Standard</h3>
@@ -393,7 +393,7 @@
                                             несвободные микропрограммы и более удобное программное обеспечение</li>
                                     </ul>
                                 </div>
-                                <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Скачать</a>
+                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-standard-ru-amd64-zstd.iso" class="button cyan gradient wide cropSides cropBottom ae-8">Скачать</a>
                             </li>
                             <li class="col-3-12 ae-5">
                                 <h3>Maximum</h3>
@@ -409,7 +409,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Скачать</a>
+                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-maximum-ru-amd64-zstd.iso" class="button orange gradient wide cropSides cropBottom ae-9">Скачать</a>
                             </li>
                             <li class="col-3-12 ae-6">
                                 <h3>Ultra</h3>
@@ -424,7 +424,7 @@
                                             использования, разработки, виртуализации и обслуживания ПК</li>
                                     </ul>
                                 </div>
-                                <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Скачать</a>
+                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso" class="button black gradient wide cropSides cropBottom ae-10">Скачать</a>
                             </li>
                         </ul>
                     </div>
