--- a/index-ru.html
+++ b/index-ru.html
@@ -293,16 +293,16 @@
                             <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fadeIn">
                                 <img src="assets/img/maximum4.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fromRight">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fadeIn">
                                 <img src="assets/img/maximum5.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fromRight">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fadeIn">
                                 <img src="assets/img/maximum6.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fromRight">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fadeIn">
                                 <img src="assets/img/maximum8.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-8 fromRight">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-8 fadeIn">
                                 <img src="assets/img/maximum9.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
                         </ul>
