--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -147,13 +147,12 @@
                         <div class="fix-12-12">
                             <ul class="flex fixedSpaces verticalCenter reverse">
                                 <li class="col-12-12 center middle">
-                                    <h6 class="ae-1 fromLeft">&nbsp;</h6>
-                                    <h1 class="ae-1 fromLeft"><svg style="width:153px;height:35px">
+                                    <h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
                                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
                                         </svg></h1>
-                                    <p class="ae-1 fromLeft"><span class="opacity-8">Загрузка скоро начнётся, если не началась, нажмите </span><a href="#downloads" class="opacity-100 button green gradient">Тута</a>.<span class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все дистрибутивы.</span></p>
-                                    <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Посмотреть все доступные варианты</a>
-                                    <a href="#more" class="button red gradient ae-4 fromCenter">Ночные сборки</a>
+                                    <p class="ae-7 fromTop"><span class="opacity-8">Загрузка скоро начнётся, если не началась, нажмите </span><a href="#downloads" class="gradient">тута</a>. <span class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все дистрибутивы.</span></p>
+                                    <a href="#downloads" class="button green gradient ae-8 fromLeft cropLeft">Посмотреть все доступные варианты</a>
+                                    <a href="#more" class="button red gradient ae-9 fromRight">Ночные сборки</a>
                                 </li>
                             </ul>
                         </div>
