--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -146,13 +146,14 @@
     
                         <div class="fix-12-12">
                             <ul class="flex fixedSpaces verticalCenter reverse">
-                                <li class="col-12-12 center middle">
+                                <li class="col-12-12 left middle">
                                     <h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
                                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
                                         </svg></h1>
-                                    <p class="ae-7 fromTop"><span class="opacity-8">Загрузка скоро начнётся, если не началась, нажмите </span><a href="#downloads" class="gradient">тута</a>. <span class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все дистрибутивы.</span></p>
-                                    <a href="#downloads" class="button green gradient ae-8 fromLeft cropLeft">Посмотреть все доступные варианты</a>
-                                    <a href="#more" class="button red gradient ae-9 fromRight">Ночные сборки</a>
+                                    <p class="ae-6 fromTop verticalCenter"><span class="opacity-8">Загрузка скоро начнётся, если не началась, нажмите </span><a href="#downloads">тута</a>. <span class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все дистрибутивы.</span></p>
+                                    <p class="ae-7 fromTop verticalCenter"><span class="opacity-8">На сайте представлены не все варианты сборки MiniOS. Если у вас возникли трудности с выбором, напишите <a href="#" ><svg style="height:19px; width:21px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use></svg>нам</a>, мы поможем.</span>
+                                    <a href="#downloads" class="button purple gradient ae-8 fromLeft cropLeft">Посмотреть все стабильные сборки</a>
+                                    <a href="#more" class="button red gradient ae-9 fromRight">Посмотреть ночные сборки</a>
                                 </li>
                             </ul>
                         </div>
