--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -159,7 +159,7 @@
                                         выбором, напишите <a href="#"><svg style="height:19px; width:21px">
                                                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram">
                                                 </use>
-                                            </svg>нам</a>, мы поможем.</span>
+                                            </svg>нам</a>, мы &nbsp;поможем.</span>
                                     <a href="#downloads"
                                         class="button purple gradient ae-8 fromLeft cropLeft">Посмотреть все стабильные
                                         сборки</a>
