--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -155,7 +155,7 @@
                                         class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все
                                         дистрибутивы.</span></p>
                                 <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
-                                        представлены не все варианты сборки MiniOS. Если у вас возникли трудности с
+                                        представлены не все варианты сборки MiniOS (всего их 18). Если у вас возникли трудности с
                                         выбором, напишите <a href="#"><svg style="height:19px; width:21px">
                                                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram">
                                                 </use>
