--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -156,12 +156,11 @@
                                         дистрибутивы.</span></p>
                                 <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
                                         представлены не все варианты сборки MiniOS (всего их 18). Если у вас возникли
-                                        трудности с
-                                        выбором, напишите <a href="#"><svg style="height:19px; width:21px">
+                                        трудности с выбором, напишите <a href="#"><svg style="height:19px; width:21px">
                                                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram">
                                                 </use>
                                             </svg>нам</a>, мы &nbsp;поможем.</span>
-                                    </wrap>
+                                    <p></p>
                                     <a href="#downloads"
                                         class="button purple gradient ae-8 fromLeft cropLeft">Посмотреть
                                         все стабильные
