--- a/trash.html
+++ b/trash.html
@@ -84,3 +84,11 @@
         </div>
         <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
       </section>
+
+      <div class="pad">
+        <ul class="p tiny">
+          <li class="opacity-8">Все тестовые версии (могут содержать ошибки, но чаще всего работоспособные), включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li>
+        </ul>
+      </div>
+      <a href="#" class="button red gradient wide cropSides cropBottom ae-8">Попробовать</a>
+    </div>
