--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -204,13 +204,14 @@
                   <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Попробовать</a>
                 </div>
               </li>
-              <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 ae-4">
+              <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-4">
                 <div class="pad">
+                  <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                     <ul class="p tiny">
-                      <li class="opacity-8">Все тестовые версии (могут содержать ошибки, но чаще всего работоспособные), включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li>
+                      <li class="opacity-8"><li class="opacity-8">Все тестовые версии (могут содержать ошибки, но чаще всего работоспособные), включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li></li>
                     </ul>
                   </div>
-                  <a href="#" class="button red gradient wide cropSides cropBottom ae-8">Попробовать</a>
+                  <a href="#" class="button blue gradient wide cropSides cropBottom ae-8">Попробовать</a>
                 </div>
               </li>
             </ul>
