--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -201,7 +201,7 @@
                       <li class="opacity-8">Все стабильные версии, включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li>
                     </ul>
                   </div>
-                  <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Попробовать</a>
+                  <a href="#" class="button black gradient wide cropSides cropBottom ae-7">Стабильные сборки</a>
                 </div>
               </li>
               <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-4">
@@ -211,7 +211,7 @@
                       <li class="opacity-8"><li class="opacity-8">Все тестовые версии (могут содержать ошибки, но чаще всего работоспособные), включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li></li>
                     </ul>
                   </div>
-                  <a href="#" class="button blue gradient wide cropSides cropBottom ae-8">Попробовать</a>
+                  <a href="#" class="button black gradient wide cropSides cropBottom ae-8">Тестовые сборки</a>
                 </div>
               </li>
             </ul>
