--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -138,45 +138,6 @@
 
     </svg>
 
-    <!-- Slide 1 (#34) -->
-    <!--section class="slide fade-6 kenBurns">
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-
-                    <div class="fix-12-12">
-                        <ul class="flex fixedSpaces verticalCenter reverse">
-                            <li class="col-12-12 center middle">
-                                <h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
-                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-                                    </svg></h1>
-                                <p class="ae-6 fromTop"><span class="opacity-8">Загрузка скоро начнётся, если не
-                                        началась, нажмите </span><a href="#downloads">тута</a>. <span
-                                        class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все
-                                        дистрибутивы.</span></p>
-                                <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
-                                        представлены не все варианты сборки MiniOS (всего их 18). Если у вас возникли
-                                        трудности с выбором, напишите <a href="#"><svg style="height:19px; width:21px">
-                                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram">
-                                                </use>
-                                            </svg>нам</a>, мы &nbsp;поможем.</span>
-                                    <p></p>
-                                    <a href="#downloads"
-                                        class="button purple gradient ae-8 fromLeft cropLeft">Посмотреть
-                                        все стабильные
-                                        сборки</a>
-                                    <a href="#more" class="button red gradient ae-9 fromRight">Посмотреть ночные
-                                        сборки</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
-    </section-->
-
 <!-- Slide 5 (#85) -->
 <section class="slide fade-6 kenBurns">
     <div class="content">
@@ -235,7 +196,7 @@
     </script>
 
     <!-- Loading Progress Bar -->
-    <div class="progress-bar blue"></div>
+    <div class="progress-bar gray"></div>
 
 </body>
 
