--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -150,7 +150,7 @@
             </svg></h1>
             <ul class="grid grid-85 equal margin-top-5 ae-2 fromCenter" data-equal-collapse-width="767">
             <p class="ae-6 fromTop"><span class="opacity-8">Загрузка скоро начнётся, если не
-                    началась, нажмите </span><a href="#downloads">тута</a>. <span
+                    началась, нажмите </span><a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso" data-auto-download>тута</a>. <span
                     class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все
                     дистрибутивы.</span></p>
             <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
