--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -79,7 +79,7 @@
                                     href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso"
                                     data-auto-download>здесь</a><span class="opacity-8">.</span></p>
                             <p class="ae-6 fromTop verticalCenter reverse"><span class="opacity-8 bold"><a
-                                        href="https://github.com/minios-linux/minios-live.wiki.git">Как установить MiniOS?</a></span></p>
+                                        href="https://github.com/minios-linux/minios-live/wiki/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-MiniOS-%D0%BD%D0%B0-%D0%B6%D1%91%D1%81%D1%82%D0%BA%D0%B8%D0%B9-%D0%B4%D0%B8%D1%81%D0%BA-%D0%B8%D0%BB%D0%B8-%D1%84%D0%BB%D0%B5%D1%88%D0%BA%D1%83">Как установить MiniOS?</a></span></p>
                             <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
                                     представлены не все варианты сборки MiniOS, рекомендуем попробовать:
                                     <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-3">
