--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -60,8 +60,8 @@
 
     </svg>
 
-    <!-- Slide 5 (#85) -->
-    <section data-name="more" class="slide fade-6 kenBurns">
+    <!-- Slide 1 (#85) -->
+    <section class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
